<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_home_24"
            android:id="@+id/home"
            android:title="@string/home"
            />
        <item
            android:icon="@drawable/ic_baseline_shopping_basket_24"
            android:id="@+id/myOrders"
            android:title="@string/myOrders" />
        <item
            android:icon="@drawable/ic_baseline_location_on_24"
            android:id="@+id/myAddress"
            android:title="@string/myAddress" />
        <item
            android:icon="@drawable/ic_baseline_contactus_24"
            android:id="@+id/contactus"
            android:title="@string/contactus" />


    </group>
    <item android:title="" />
     <group android:checkableBehavior="single">
         <item
             android:icon="@drawable/ic_baseline_login_24"
             android:id="@+id/logout"
             android:title="@string/logout" />
     </group>

</menu>