<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.sign.SignupActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/p" />

    <com.google.android.material.textfield.TextInputLayout
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_margin="8dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:paddingLeft="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_usernameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailaddress"
        android:layout_margin="8dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_emailAddressSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="8dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:text="@string/haveaccount"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/text_view_signin"
        android:onClick="SignUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/signup"
        android:background="@drawable/shap_skip"
        android:id="@+id/buttonsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp" />

   <LinearLayout
       android:layout_marginTop="8dp"
       android:gravity="center"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <Button
           android:textStyle="bold"
           android:drawableLeft="@drawable/facebook"
           android:backgroundTint="@color/purple_500"
           android:text="@string/login"
           android:layout_marginEnd="20dp"
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:layout_marginRight="20dp" />
       <Button
           android:textStyle="bold"
           android:drawableLeft="@drawable/google"
           android:textAppearance="@style/TextAppearance.AppCompat.Medium"
           android:textColor="@color/teal_700"
           android:backgroundTint="@color/white"
           android:text="@string/signin"
           android:layout_width="180dp"
           android:layout_height="wrap_content" />
   </LinearLayout>


</LinearLayout>
</ScrollView>