<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.sign.SigninActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <ImageView
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/p" />

    <com.google.android.material.textfield.TextInputLayout
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailaddress"
        android:layout_margin="8dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="8dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/text_forgotPassword"
        android:text="@string/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp" />
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:text="@string/donthaveaccount"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/text_view_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="Signin"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/signin"
        android:background="@drawable/shap_skip"
        android:id="@+id/buttonsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textStyle="bold"
            android:drawableLeft="@drawable/facebook"
            android:backgroundTint="@color/purple_500"
            android:text="@string/login"
            android:layout_marginEnd="20dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp" />
        <Button
            android:textStyle="bold"
            android:drawableLeft="@drawable/google"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700"
            android:backgroundTint="@color/white"
            android:text="@string/signin"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
</ScrollView>