<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
        app:menu="@menu/main_menu"
        app:navigationIcon="@drawable/ic_baseline_menu_24" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_above="@+id/tabLayout"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tabLayout"
            android:layout_below="@+id/toolbar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_menu"
            style="@style/Widget.Design.NavigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/shap_drawer"
            app:headerLayout="@layout/drawer_header_layout"
            app:menu="@menu/menu_bottom_nav"
            />
    </androidx.drawerlayout.widget.DrawerLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabLayout"
        android:layout_below="@+id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <fragment
            android:id="@+id/home_fragment"
            class="com.example.tartas.view.MainActivity.HomeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_home" />
    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        style="@style/customfontstyle"
        android:background="@color/white_tabs"
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:tabGravity="fill"
        app:tabIconTint="@color/tab_icon_tint"
        app:tabIndicatorColor="#93A6B7"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="#F00"
        app:tabTextColor="#93A6B7">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_home_24"
            android:text="@string/home"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_cake_24"
            android:text="@string/cakes" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:text="@string/cart" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_account_24"
            android:text="@string/account" />
    </com.google.android.material.tabs.TabLayout>


</RelativeLayout>
